# Bober-drive

./: .env.example  .gitignore  AGENTS.local.md  AUTONOMOUS_DAEMON_QUICKSTART.md  BUILD-REPORT-v3.0.1.md  CHANGELOG.md  COMPLETION-REPORT.md  COMPLETION_ANSWER.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST-v3.0.1.md  DEPLOYMENT-GUIDE-WEEK4-6.md  DOCUMENTATION-INDEX-WEEK4-6.md  E2E_TEST_REPORT.md  FILE_MANAGER_INTEGRATION_COMPLETE.md  FINAL-COMPLETION-v3.0.1.md  FINAL-VERIFICATION-WEEK4-6.md  FINAL_STATUS.md  GITHUB-RELEASE-INSTRUCTIONS.md  GITHUB-UPDATE-SUMMARY-v3.0.1.md  GITHUB_UPDATE_DASHBOARD_v3.0.1.md  IDE-INTEGRATION-COMPLETION-REPORT.md  IDE-INTEGRATION-README.md  INTEGRATION-COMPLETION-REPORT.md  INTEGRATION_WITH_PROFIA.md  LICENSE  NEXUS-V3-INTEGRATION-COMPLETE.md  NEXUS-V3-RELEASE-COMPLETE.md  PRODUCTION-READY-SIGN-OFF.md  PRODUCTION_RELEASE_v3.0.1.md  README.md  README_PROFIA_INTEGRATION.md  README_UNIVERSAL_INTEGRATION.md  RELEASE-NOTES-v3.0.0-IDE.md  RELEASE-NOTES-v3.0.0.md  RELEASE_STATUS_v3.0.0.md  ROADMAP_STATUS_TABLE.md  START-HERE-WEEK4-6.md  TEST-RESULTS-FINAL-v3.0.1.md  TEST_COMPLETION.txt  (+24 more)
docs/: AGENTS.local.md  DAEMON_README.md  DASHBOARD_README.md  INSTALL.md  INTEGRATION-GUIDE.md  MIGRATION-GUIDE-V3.md  NEXUS-ARCHITECTURE-VISUAL.md  NEXUS-V3-ARCHITECTURE-UNIFIED.md  NEXUS-V3-DEEP-ARCHITECTURE-ANALYSIS.md  NEXUS-V3-PHASE4-COMPLETION.md  QUICK-START-V3.md  QUICK-START.md  RELEASE_NOTES_v3.0.2.md  REPOSITORY_STRUCTURE.md  VISUAL_GUIDE.md
driver/: CREATE-GITHUB-REPOS-GUIDE.md  DRIVER-CHECKPOINTS-ARCHITECTURE.md  GITHUB-REPOS-DESCRIPTIONS.md  GITHUB-REPOS-FINAL-SUMMARY.md  README.md  __init__.py  context_extractor.py  dashboard.py  demo_fts5_and_trash.py  demo_neural_reflex.py  demo_vault_week1.py  demo_week4_6_integration.py  file_content_cache_manager.py  integration_example_week2.py  lsp_server.py  migrate_v2_to_v3.py  neural_reflex_engine.py  neural_reflex_engine_v3.py  neural_reflex_engine_v3_examples.py  nexus_audio_generator.py  nexus_auto_updater.py  nexus_autonomous_daemon.py  nexus_file_manager.py  nexus_file_system_mapper.py  nexus_file_system_mapper_v3.py  nexus_fts5_indexer_v3.py  nexus_fts5_indexer_v3_examples.py  nexus_graphify.py  nexus_graphify_v3.py  nexus_graphify_v3_examples.py  nexus_obsidian_bridge.py  nexus_orchestrator_v3.py  nexus_project_rules.py  nexus_rules_engine_v3.py  nexus_rules_engine_v3_examples.py  nexus_trash_manager_v3.py  test_fts5_and_trash.py  test_fts5_trash_simple.py  test_neural_reflex.py  test_neural_reflex_engine_v3.py  (+14 more)
scripts/: agent_search_template.py  (+3 more)
(+16 files in other folders)
