[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-extended"
version = "2.1.0"
description = "Nexus Extended Architecture - Local-first multi-project management system"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Bober-Drive Team"}
]
keywords = ["nexus", "project-management", "orchestration", "memory", "ai", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
all = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "requests>=2.31.0",
]

[project.scripts]
nexus = "driver.nexus_cli:main"
nexus-dashboard = "driver.unified_dashboard:main"
nexus-test = "test_nexus_full:main"

[project.urls]
Homepage = "https://github.com/yourusername/nexus-extended"
Documentation = "https://github.com/yourusername/nexus-extended/docs"
Repository = "https://github.com/yourusername/nexus-extended"
Issues = "https://github.com/yourusername/nexus-extended/issues"

[tool.setuptools]
packages = ["driver"]
include-package-data = true

[tool.setuptools.package-data]
driver = ["*.md", "skills/*.prompt", "skills/*.py"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
